# isr-raw

./: .gitignore  .travis.yml  2007-03-18.ini  2007-03-23.ini  2012-11-07.ini  2013-04-14.ini  2013-04-14_60-90.ini  2013-05-01.ini  CombineISRhist.py  FakeACF.py  README.md  README.rst  SimpleSNRplot-2013-04-11T0824.py  SimpleSNRplot-2013-04-11T0854.py  SimpleSNRplot.py  Wedlund2013.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  singleplot.py
.github/workflows/: ci.yml
Examples/: 2007-03-23.ini  2007-03-23.py  2011-03-01.ini  2011-03-01T1000.py  2011-03-02.ini  2013-04-14.ini  2013-04-14T0854.py  2013-04-14_60-90.ini  2013-05-01.ini  JointISRHST-2013-04-14T824.py  JointISRHST-2013-04-14T854.py  JointISRHST_T824.py  JointISRHST_T854.py  JointISRHST_png2mkv.sh  PLburst2013Apr14T854.py  README.md  SimpleSNR-2007-03-17.py  SimpleSNR-2007-03-23.py  SimpleSNR-2011-03-01.py  SimpleSNR-2013-04-11.py  SimpleSNR-2013-04-14T0824.py  SimpleSNR-2013-04-14T0854.py  SimpleSNR-2013-04-14T0927.py  SimpleSNR-2013-04-14T1033.py  SimpleSNR-2013-04-14T1034.py  SimpleSNR-2013-04-23.py  SimpleSNR-2013-04-26.py  SimpleSNR-2013-05-01.py  SimpleSNR-2015-10-07.py  SimpleSNRplot-2013-04-11T0824.py  SimpleSNRplot-2013-04-14T0824.py  SimpleSNRplot-2013-04-14T0854.py
isrutils/: __init__.py  common.py  io.py  looper.py  overlayISRopt.py  plasmaline.py  plots.py  rawacf.py  snrpower.py  summed.py  switchyard.py
matlab/: dt2_pl_TIME.m  pl_power.m  plasmaline_DT2.m  power_Alternating code.m  power_DT3.m  power_zoom_Dt3.m  spectrum_from_hdf5.m  spectrume_DT0_fixed.m  spectrume_DT0_fixed_fixedWlags.m
precompute/: transcareigen.h5
src/isrraw/: __init__.py  common.py  plots.py  summed.py
src/isrraw/tests/: test_all.py
src/isrutils/: __init__.py  overlayISRopt.py  plots.py  summed.py
src/isrutils/tests/: test_all.py
test/: test.py
tests/: test.py  test_all.py
