[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isrraw"
description = "read and plot Incoherent Scatter Radar raw data"
keywords = ["incoherent scatter radar", "CFAR"]
classifiers = ["Development Status :: 4 - Beta",
 "Environment :: Console",
 "Intended Audience :: Science/Research",
 "Operating System :: OS Independent",
 "Programming Language :: Python :: 3",
 "Topic :: Scientific/Engineering :: Atmospheric Science"
]
requires-python = ">=3.10"
dynamic = ["version", "readme"]
dependencies = ["python-dateutil", "numpy", "xarray", "scipy", "pymap3d", "h5py"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "isrraw.__version__"}

[project.optional-dependencies]
tests = ["pytest"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except", "mypy",
  "types-python-dateutil", "types-requests"]
plot = ["GeoData", "matplotlib"]

[tool.black]
line-length = 100

[tool.mypy]
files = ["src"]

ignore_missing_imports = true
strict_optional = false
show_column_numbers = true
