[metadata]
name = isrutils
version = 0.6.0
author = Michael Hirsch, Ph.D.
url = https://github.com/scivision/isrutils
description = utilities for reading and plotting ISR raw data
keywords =
  incoherent scatter radar
  CFAR
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires = 
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  python-dateutil
  numpy
  xarray
  h5py
  scipy
  sciencedates
  pymap3d


[options.extras_require]
tests = 
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib
  seaborn
  pathvalidate
  GeoData

[options.entry_points]
console_scripts =
  IRIaltitudeProfile = AltitudeProfile:main
  IRItimeProfile = TimeProfile:main
  IRIlatitudeProfile = LatitudeProfile:main


[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  RuntimeError
  NotImplementedError
  ImportError
  KeyError
  FileNotFoundError
  CalledProcessError
  logging.warning
  ValueError
  TypeError
