[metadata]
name = isrutils
version = 0.6.0
author = Michael Hirsch, Ph.D.
url = https://github.com/scivision/isrutils
description = utilities for reading and plotting ISR raw data
keywords =
  incoherent scatter radar
  CFAR
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  python-dateutil
  numpy
  xarray
  h5py
  scipy
  sciencedates
  pymap3d
  pathvalidate


[options.extras_require]
tests =
  pytest
  flake8
  mypy
plot =
  matplotlib
  seaborn
  GeoData

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
