[metadata]
name = isrutils
version = 0.6.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/isrutils
description = utilities for reading and plotting ISR raw data
keywords =
  incoherent scatter radar
  CFAR
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  python-dateutil
  numpy
  xarray
  h5py
  scipy
  sciencedates
  pymap3d

[options.extras_require]
tests =
  pytest
  flake8
  mypy
plot =
  matplotlib
  seaborn
  GeoData
